chore: fetch collections && docs: updated docs
